# dyby

./: .gitignore  README.md  setup.cfg
src/dyby/: __init__.py  __main__.py  dyby.py
tests/: basic_test.py  file_test.py
