[metadata]
name = dyby-jakubmalczewski
version = 0.0.1
author = Jakub Malczewski
author_email = jakubmalczewski@mailbox.org
description = A small package for on-run data and code versioning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakubmalczewski/dyby
project_urls =
    Bug Tracker = https://github.com/jakubmalczewski/dyby/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src